<resources>
    <string name="app_name">KaizenTranspo</string>
    <string name="title_activity_book">BookActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="admin_login">Admin Login</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="Register">Register</string>
    <string name="click_to_login">Click To Login</string>
    <string name="click_to_register">Click to Register</string>
    <string name="logout">logout</string>
    <string name="ek_img_content">ExportKit Image</string>
    <string name="companyMoto">Seamless Journeys, Effortless Booking</string>
    <string name="log_in_string">Log in</string>
    <string name="register_string">Register</string>
    <string name="welcome_back_string">Welcome Back</string>
    <string name="create_account_string">Create account</string>
    <string name="username_string">Username</string>
    <string name="password_string">Password</string>
    <string name="or_string">OR</string>
    <string name="welcomeString">Welcome,</string>
    <string name="usernameString">User Name</string>
    <string name="getStartedString">Get started</string>
    <string name="logOutString">Log out</string>
    <string name="ticket">Ticket</string>
    <string name="book">Book</string>
    <string name="choose_your_bus">Choose your Bus!</string>
    <string name="reserved_by">Reserved By:</string>
    <string name="list_of_bookings">List of Bookings</string>
    <string name="bookings">bookings</string>
    <string name="remove">remove</string>
    <string name="create_bus">Create Bus</string>
    <string name="Bookings">Bookings</string>
    <string name="removeBus">removeBus</string>
    <string name="bus_details">Bus Details</string>
    <string name="origin">Origin:</string>
    <string name="destination">Destination:</string>
    <string name="time_of_departure">Time of Departure:</string>
    <string name="bus_number">Bus Number:</string>
    <string name="Select_Bus">Select_Bus</string>
    <string name="See_Bus_Bookings">See_Bus_Bookings</string>
    <string name="adminCode">adminCode</string>
    <string name="Add_bus">Add Bus</string>
    <string name="Reset" />
    <string name="reset">Reset</string>
    <string name="reset_seats">Reset seats</string>
    <string name="remove_bus">remove bus</string>
    <string name="mangage_bus">Mangage Bus</string>
    <string name="manage_bus">manage bus</string>


    <string-array name="bus_destination">
        <item>Manila</item>
        <item>La Union</item>
        <item>Vigan</item>
        <item>Davao</item>
        <item>Bicol</item>
        <item>Dagupan</item>
        <item>Tarlac</item>
        <item>Subic</item>
    </string-array>

    <string-array name="bus_number">
        <item>Bus #123</item>
        <item>Bus #456</item>
        <item>Bus #789</item>
        <item>Bus #690</item>
        <item>Bus #123</item>
        <item>Bus #456</item>
        <item>Bus #789</item>
        <item>Bus #690</item>
    </string-array>

    <string-array name="price">
        <item>₱869</item>
        <item>₱250</item>
        <item>₱1250</item>
        <item>₱3000</item>
        <item>₱1890</item>
        <item>₱150</item>
        <item>₱300</item>
        <item>₱780</item>
    </string-array>

    <string-array name="time">
        <item>9:00 AM</item>
        <item>10:00 AM</item>
        <item>12:00 PM</item>
        <item>3:00 PM</item>
        <item>9:00 AM</item>
        <item>10:00 AM</item>
        <item>12:00 PM</item>
        <item>3:00 PM</item>
    </string-array>
</resources>
