<?xml version="1.0" encoding="utf-8"?>
<<<<<<< HEAD

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    tools:context=".MainActivity"
    android:background="@raw/mainbackground">


    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_marginBottom="88dp"
        android:background="@drawable/rounded_edittext_background"
        android:gravity="center"
        android:hint="Username"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/buttonLogin"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/rounded_edittext_background"
        android:gravity="center"
        android:hint="Password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/buttonLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="335dp"
        android:layout_height="48dp"
        android:layout_marginStart="116dp"
        android:layout_marginBottom="448dp"
        android:text="Login"
        android:textColorHighlight="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:layout_width="244dp"
        android:layout_height="215dp"
        android:layout_marginBottom="32dp"
        android:scaleType="centerCrop"
        android:src="@raw/logowithname"
        app:layout_constraintBottom_toTopOf="@+id/editTextUsername"
        tools:layout_editor_absoluteX="161dp"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>
=======
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="15dp"
    android:layout_height="match_parent"
    tools:context=".Login">

    <TextView
        android:text="@string/login"
        android:textSize="25sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


<com.google.android.material.textfield.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/email"
        android:hint="@string/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:hint="@string/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:id="@+id/progressBar"/>
<Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/login"
    android:id="@+id/loginButton"/>

    <TextView
        android:textStyle="bold"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/RegisterNow"
        android:text="@string/click_to_register"/>

    
</LinearLayout>
>>>>>>> Perry's
