<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="wrap_content" >







    <RelativeLayout android:id="@+id/page_login_ek1"
        android:layout_marginTop="0dp"
        android:layout_marginStart="0dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >


        <ImageView android:id="@+id/wallpaper_1"
            android:src="@drawable/wallpaper1"
            android:contentDescription="wallpaper_1"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:scaleType="fitXY"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <ImageView
            android:id="@+id/screen"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:scaleType="fitXY"
            android:contentDescription="screen"
            android:src="@drawable/screen" />

        <TextView android:id="@+id/welcome_back"
            android:textStyle="bold"
            android:textSize="40dp"
            android:textColor="@color/black"
            android:layout_width="192dp"
            android:layout_height="111dp"
            android:text="@string/create_account_string"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="26dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="193dp"
            />


        <RelativeLayout
            android:id="@+id/userCredentials"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/group_3"
            android:layout_centerHorizontal="true"

            android:layout_marginStart="46dp"
            android:layout_marginTop="284dp"
            android:layout_marginBottom="-348dp">


            <ImageView
                android:id="@+id/userIcon"
                android:layout_width="33dp"
                android:layout_height="34dp"
                android:layout_marginStart="0dp"
                android:layout_marginTop="15dp"
                android:src="@drawable/usericon"

                />

            <EditText
                android:id="@+id/registerUsername"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_gravity="center_horizontal|center"
                android:layout_marginLeft="30dp"
                android:gravity="center"
                android:hint="Enter username"
                android:textColor="@color/black"
                android:textSize="14sp" />


            <ImageView
                android:id="@+id/passwordIcon"
                android:layout_width="33dp"
                android:layout_height="34dp"
                android:layout_marginStart="0dp"
                android:layout_marginTop="62dp"
                android:contentDescription="login_page_password_1"
                android:src="@drawable/passwordicon" />

            <EditText
                android:id="@+id/registerPassword"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_gravity="center_horizontal|center"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="55dp"
                android:gravity="center"
                android:hint="@string/password_string"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textSize="14sp" />


        </RelativeLayout>




        <RelativeLayout android:id="@+id/group_3"
            android:layout_marginTop="408dp"
            android:layout_marginStart="18dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="100dp"
            >

            <Button
                android:id="@+id/buttonRegister"
                android:layout_width="262dp"
                android:layout_height="55dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="101dp"
                android:background="@drawable/rectangle1"
                android:gravity="center"
                android:shadowColor="#000000"
                android:shadowDx="0"
                android:shadowDy="4"
                android:shadowRadius="4"
                android:text="@string/register_string"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <Button
                android:id="@+id/buttonLogin"
                android:layout_width="262dp"
                android:layout_height="55dp"
                android:layout_marginStart="35dp"
                android:layout_marginTop="0dp"
                android:background="@drawable/rectangle2"
                android:shadowColor="#000000"
                android:shadowDx="0"
                android:shadowDy="4"
                android:shadowRadius="4"
                android:text="@string/log_in_string"
                android:textColor="@color/white"
                android:textSize="24sp" />






            <TextView
                android:id="@+id/or"
                android:layout_width="211.4dp"
                android:layout_height="19.4dp"
                android:layout_gravity="center_horizontal|center"
                android:layout_marginLeft="56dp"
                android:layout_marginTop="70dp"
                android:gravity="center"
                android:text="@string/or_string"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <ImageView android:id="@+id/line_3"
                android:src="@drawable/line_3"
                android:contentDescription="line_3"
                android:layout_marginStart="181dp"
                android:layout_marginTop="78dp"
                android:layout_width="142dp"
                android:layout_height="2dp" />

            <ImageView android:id="@+id/line_4"
                android:src="@drawable/line_4"
                android:contentDescription="line_4"
                android:layout_marginStart="-2dp"
                android:layout_marginTop="78dp"
                android:layout_width="142dp"
                android:layout_height="2dp" />

        </RelativeLayout>



    </RelativeLayout>



</RelativeLayout>